<?xml version="1.0"?>
<package>
  <name>cardsflow_documentation</name>
  <version>0.0.0</version>
  <description>CARDSflow documentation</description>

  <maintainer email="st@gi.ai">Simon Trendel</maintainer>
  <maintainer email="ak@gi.ai">Aliona Kharchenko</maintainer>

  <license>BSD</license>

  <url type="website">http://roboy.org</url>
  <url type="repository">https://github.com/CARDSflow/CARDSflow</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
